config/k8s/Azure/staging.ingress..yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dockerdemo-ingress
  labels:
    app: dockerdemo
    tier: ingress
spec:
  rules:
    - host: staging.52.187.236.54.xip.io
      http:
        paths:
          - path: /api
            backend:
              serviceName: webbff-svc
              servicePort: 80
          - path: /
            backend:
              serviceName: webui-svc
              servicePort: 80
